Changed text on main page. Removed debug line from layouts/index.html. Moved footer to its own partial.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,11 +8,7 @@
         {{ block "main" . }}
         {{ end }}
     </article>
-    <footer>
-        <hr>
-        <small>Copyright &copy; 2024 Frog Urn Citadel</small>
-        <hr>
-    </footer>
+    {{partial "footer.html" . }}
 </body>
 </html>
 
