--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>{{ .Site.Title }}</h1>
+    <div style="font-size:1.5em">{{ .Site.Title }}</div>
     <nav>
         <hr>
         {{ range .Site.Menus.main }}
