Added custom CSS to h1-h3 headings.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header>
-    <div style="font-size:1.5em">{{ .Site.Title }}</div>
+    <h1>{{ .Site.Title }}</h1>
     <nav>
         <hr>
         {{ range .Site.Menus.main }}
