--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,3 +3,19 @@ html, body {
     width: 90%;
     max-width: 75ch;
 }
+
+header h1 {
+    font-size: 2.0em;
+}
+
+main h1 {
+    font-size: 1.5em;
+}
+
+main h2 {
+    font-size: 1.17em;
+}
+
+main h3 {
+    font-size: 1.0em;
+}
