--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,16 +6,17 @@ html, body {
 
 header h1 {
     font-size: 2.0em;
+    font-style: italic;
 }
 
 main h1 {
-    font-size: 1.5em;
+    font-size: 1.66em;
 }
 
 main h2 {
-    font-size: 1.17em;
+    font-size: 1.33em;
 }
 
 main h3 {
-    font-size: 1.0em;
+    font-size: 1.17em;
 }
