--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,14 +1,13 @@
 {{ define "main" }}
   <main>
     <article>
-      <!-- "{{ .Content }}" pulls from the markdown content of the corresponding _index.md -->
       {{ .Content }}
     </article>
     <ul>
       <!-- Ranges through content/posts/*.md -->
-      {{ range .Pages.ByTitle }}
+      {{ range .Pages.ByDate.Reverse }}
         <li>
-          <a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a>
+          {{ .Date | time.Format ":date_medium" }}: <a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a>
         </li>
       {{ end }}
     </ul>
