Added breadcrumbs to website.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,6 +6,7 @@
             <a href="{{ .URL }}">{{ .Name }}</a>&nbsp;
         {{ end }}
         <hr>
+        {{ partial "breadcrumbs.html" . }}
     </nav>
 </header>
 
