Replaced the old navigation bar entirely with breadcrumbs, and added a list of content folders to the main page.

--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -1,6 +1,10 @@
-<small>
-{{- range .Ancestors.Reverse }}
-    <a href="{{ .RelPermalink }}">{{ .Title }}</a> &rarr;
-{{- end }}
-<a href="{{ .RelPermalink }}">{{ .Title }}</a>
-</small>
+{{ if not .IsHome }}
+    <hr>
+    <small>
+        {{- range .Ancestors.Reverse }}
+            <a href="{{ .RelPermalink }}">{{ .Title }}</a> &rarr;
+        {{- end }}
+        <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+    </small>
+    <hr>
+{{ end }}
