--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,9 @@ html, body {
 header h1 {
     font-size: 2.0em;
     font-style: italic;
+    margin-bottom: 0.5em;
 }
+
 
 main h1 {
     font-size: 1.5em;
