Added a custom sort order to the site sections on the main page, and added bullet points to Castalia log 6 to be fleshed out later.

--- a/layouts/partials/content-folders.html
+++ b/layouts/partials/content-folders.html
@@ -1,5 +1,5 @@
 <ul>
-    {{ range .Site.Sections }}
+    {{ range sort .Site.Sections "Params.weight" }}
         <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
     {{ end }}
 </ul>
